force-app/main/default/objects/ssot__JobPositionPayGrade__dlm/fields/ssot__JobPositionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__JobPositionId__c</fullName>
    <label>Job Position</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>JobPositionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>