force-app/main/default/objects/ssot__JobPositionPayGrade__dlm/fields/ssot__PositionPayGradeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PositionPayGradeId__c</fullName>
    <label>Position Pay Grade</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PositionPayGradeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>