force-app/main/default/objects/ssot__JobPositionPayGrade__dlm/fields/ssot__rel_1727366664917_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366664917_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPositionPayGrade_JobPositionId_ma_rel</label>
    <referenceTo>ssot__JobPosition__dlm</referenceTo>
    <relationshipLabel>JobPositionPayGrade_JobPositionId_ma_rel</relationshipLabel>
    <relationshipName>rel_1727366664917_end</relationshipName>
    <type>Lookup</type>
</CustomField>