force-app/main/default/objects/ssot__JobPositionPayGrade__dlm/fields/ssot__rel_1727409957091_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727409957091_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPositionPayGrade_PositionPayGrade_rel</label>
    <referenceTo>ssot__PositionPayGrade__dlm</referenceTo>
    <relationshipLabel>JobPositionPayGrade_PositionPayGrade_rel</relationshipLabel>
    <relationshipName>rel_1727409957091_end</relationshipName>
    <type>Lookup</type>
</CustomField>